--- a/grid.html
+++ b/grid.html
@@ -8,15 +8,15 @@
 </head>
 <body>
 <div class="container">
-<div>1</div>
-<div>2</div>
-<div>3</div>
-<div>4</div>
-<div>5</div>
-<div>6</div>
-<div>7</div>
-<div>8</div>
-<div>9</div> 
+<div> Item 1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad minima libero voluptatibus voluptatum assumenda qui, in magni alias quaerat dolorem tenetur voluptates provident. Autem ut, excepturi doloremque quas sunt maiores!</div>
+<div class="item">Item 2</div>
+<div class="item">Item 3</div>
+<div class="item">Item 4</div>
+<div class="item">Item 5</div>
+<div class="item">Item 6</div>
+<div class="item">Item 7</div>
+<div class="item">Item 8</div>
+<div class="item">Item 9</div> 
 
 </div>
 </body>
