--- a/grid.html
+++ b/grid.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-<div> Item 1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad minima libero voluptatibus voluptatum assumenda qui, in magni alias quaerat dolorem tenetur voluptates provident. Autem ut, excepturi doloremque quas sunt maiores!</div>
+<div class="item"> Item 1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad minima libero voluptatibus voluptatum assumenda qui, in magni alias quaerat dolorem tenetur voluptates provident. Autem ut, excepturi doloremque quas sunt maiores!</div>
 <div class="item">Item 2</div>
 <div class="item">Item 3</div>
 <div class="item">Item 4</div>
